--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="#" class="navbar-brand">Adi Order</a>
+          <%= link_to "Adi Order", root_path, class: 'navbar-brand' %>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
           <ul class="nav navbar-nav navbar-right text-center">
-            <li class="active"><a href="#">History</a></li>
-            <li><a href="#">New </a></li>
-            <li><a href="#">Save</a></li>
-            <li>
+
               <% if user_signed_in? %>
+              <li class="active"><%= link_to "Que", root_path %></li>
+              <li><%= link_to "New", orders_path %></li>
+              <li><a href="#">Save</a></li>
+              <li>
                 <button type="button" class="btn btn-default navbar-btn">
                   <%= link_to 'LOG OUT', destroy_user_session_path, :method => :delete %>
                 </button>
