--- a/app/views/home/_history.html.erb
+++ b/app/views/home/_history.html.erb
@@ -1,1 +1,26 @@
-<h2>Order History</h2>
+<div class="row">
+
+  <div class="col-md-6 col-md-offset-3 block-right">
+      <%= button_to 'New Order', root_path, method: :create, class: 'btn btn-lg btn-block btn-success' %>
+  </div>
+
+</div>
+
+<div class="row">
+  <% @order.each do |order| %>
+    <div class="well">
+      <div class="col-md-4">
+        <strong>Order :</strong><%= order.order_numbers %>
+      </div>
+      <div class="col-md-4 col-md-offset-4 text-right">
+        <a href="#">Edit</a> |
+        <%= link_to 'Delete',  { action: :destroy, id: order.id },
+       method: :delete,
+       data: { confirm: "Delete this news order?" }
+       %>
+      </div>
+
+    </div>
+
+  <%end%>
+</div>
