--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,8 @@
 
 
 <% if user_signed_in? %>
-  <%= render 'history' %>
+
+  <%= render partial: 'history', object: @order %>
 <% else %>
   <%= render 'not-user'%>
 <%end%>
