--- a/app/views/home/_history.html.erb
+++ b/app/views/home/_history.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 
-  <div class="col-md-6 col-md-offset-3 block-right">
-      <%= button_to 'New Order', home_index_path, method: :create, class: 'btn btn-lg btn-block btn-success' %>
+  <div class="col-md-6 col-md-offset-3 text-center">
+      <h2>ORDER LIST</h2>
 
   </div>
 
