--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 
               <% if user_signed_in? %>
               <li class="active"><%= link_to "Que", root_path %></li>
-              <li><%= link_to "New", orders_path %></li>
+              <li><%= link_to "New", home_index_path, method: :create, class: 'btn btn-lg btn-block btn-primary' %></li>
               <li><a href="#">Save</a></li>
               <li><%= link_to "Settings",  edit_user_registration_path %></li>
               <li>
