--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -8,5 +8,8 @@
       <%= render partial: 'details', object: @order %>
 
   </div>
+  <div class="col-md-6 col-md-offset-3">
+    <%= render partial: 'form', object: @order %>
+  </div>
 
 </div>
