--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -9,7 +9,7 @@
 
   </div>
   <div class="col-md-6 col-md-offset-3">
-    <%= render partial: 'form', object: @order %>
+    <%= render partial: '/items/form', object: @order %>
   </div>
 
 </div>
