--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,5 +1,7 @@
 <%= form_for :item, url: {action: "create"}, html: {class: "nifty_form"} do |f| %>
   <form>
+    <%= f.hidden_field :id, value: params[:id] %>
+
     <div class="form-group">
       <label for="Item Number">Artical Number</label>
       <%= f.text_field :number %>
