--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -5,11 +5,13 @@
     <h2>Edit Order <%= @order.id %></h2>
   </div>
   <div class="col-md-12 text-left">
-      <%= render partial: 'details', object: @order %>
-
+      <%= render partial: '/orders/parts/details', object: @order %>
   </div>
   <div class="col-md-6 col-md-offset-3">
-    <%= render partial: '/items/form', object: @order %>
+    <%= render partial: '/orders/parts/form', object: @order %>
+  </div>
+  <div class="col-md-6 col-md-offset-3">
+    <%= render partial: '/orders/parts/list', object: @order %>
   </div>
 
 </div>
