--- a/app/views/orders/parts/_list.html.erb
+++ b/app/views/orders/parts/_list.html.erb
@@ -1,12 +1,13 @@
 <h2>This is a list</h2>
-<% if @list_items.any? %>
-<h3>Number of Items : <%= @list_items.count %> </h3>
-   <% @list_items.each do |item| %>
-      <%= hidden_field :id, value: item.id %>
-      <%= item.artical_number %> <br>
-      <%= item.artical_size %> <br>
-      <%= item.artical_gender %> <br>
+<% if @Articals.any? %>
+<h3>Number of Items : <%= @Articals.count %> </h3>
+   <% @Articals.list.each do |f| %>
+
+      <%= f.artical_number %> <br>
+      <%= f.artical_size %> <br>
+      <%= f.artical_gender %> <br>
       <hr>
+  
    <% end %>
  <% else %>
  <div class="row">
