--- a/app/views/orders/parts/_form.html.erb
+++ b/app/views/orders/parts/_form.html.erb
@@ -3,17 +3,17 @@
     <%= f.hidden_field :id, value: params[:id] %>
 
     <div class="form-group">
-      <label for="Item Number">Artical Number</label>
+      <%= f.label :number %><br />
       <%= f.text_field :number %>
     </div>
 
     <div class="form-group">
-      <label for="Item Name">Artical Size</label>
+      <%= f.label :size %><br />
       <%= f.text_field :size  %>
     </div>
 
     <div class="form-group">
-      <label for="Item Name">Artical Gender</label>
+      <%= f.label :gender%><br />
       <%= f.text_field :gender %>
     </div>
 
